# mad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  Core.cpp  Core.h
core/common/: Cast.hpp  Color.cpp  Color.hpp  Error.cpp  Error.hpp  FVec2D.cpp  FVec2D.hpp
core/database/: ClientStorageDriver.hpp
core/database/database/: Database.cpp  Database.hpp
core/database/driver/: ClientStorageDriver.hpp
core/database/driver/offline/: OfflineClientStorageDriver.cpp  OfflineClientStorageDriver.hpp
core/database/driver/postgresql/: DatabaseClientStorageDriver.cpp  DatabaseClientStorageDriver.hpp
core/details/: RenderableWithId.hpp
core/event/: Event.cpp  Event.hpp  Keystroke.cpp  Keystroke.hpp  VisualEvent.cpp  VisualEvent.hpp  WorldUpdate.cpp  WorldUpdate.hpp
core/event/action/: EndOfRenderAction.cpp  EndOfRenderAction.hpp
core/event/management/: EventDispatcher.hpp  EventProducer.cpp  EventProducer.hpp  ImmediateDispatcher.cpp  ImmediateDispatcher.h  ImmediateDispatcher.hpp
core/event/management/condition/: CollisionCondition.cpp  CollisionCondition.hpp  Condition.hpp  Counter.cpp  Counter.hpp  EndAnimationCondition.cpp  EndAnimationCondition.hpp  EnemyAttackCondition.cpp  EnemyAttackCondition.hpp  FallCondition.cpp  FallCondition.hpp  FallDownCondition.cpp  FallDownCondition.hpp  KeyDownCondition.cpp  KeyDownCondition.hpp  KeyPressedCondition.cpp  KeyPressedCondition.hpp  KeyReleasedCondition.cpp  KeyReleasedCondition.hpp  LastStateCondition.cpp  LastStateCondition.hpp  SensorCondition.cpp  SensorCondition.hpp  SensorEndCondition.cpp  SensorEndCondition.hpp  TakeDamageCondition.cpp  TakeDamageCondition.hpp  TimerCondition.cpp  TimerCondition.hpp  TrueCondition.cpp  TrueCondition.hpp
core/event/management/controller/: Attack.cpp  Attack.hpp  CameraController.cpp  CameraController.hpp  Controller.cpp  Controller.hpp  DealDamage.cpp  DealDamage.hpp  Destroy.cpp  Destroy.hpp  Die.cpp  Die.hpp  EnemyAttack.cpp  EnemyAttack.hpp  Fall.cpp  Fall.hpp  FlyUp.cpp  FlyUp.hpp  GroundMovement.cpp  GroundMovement.hpp  Hurt.cpp  Hurt.hpp  Idle.cpp  Idle.hpp  Jump.cpp  Jump.hpp  JumpImpulse.cpp  JumpImpulse.hpp  Movement.cpp  Movement.hpp  Run.cpp  Run.hpp  StartJump.cpp  StartJump.hpp
core/event/management/dispatcher/: DelayedDispatcher.cpp  DelayedDispatcher.hpp  EventDispatcher.hpp  ImmediateDispatcher.cpp  ImmediateDispatcher.hpp
core/event/management/handler/: AuthorizationMenuEventsHandler.cpp  AuthorizationMenuEventsHandler.hpp  ClosingController.cpp  ClosingController.hpp  CollisionHandler.cpp  CollisionHandler.hpp  EventHandler.hpp  GameRunnerEventsHandler.cpp  GameRunnerEventsHandler.hpp  LevelPauseHandler.cpp  LevelPauseHandler.hpp  LevelRunnerEventsHandler.cpp  LevelRunnerEventsHandler.hpp  MainMenuEventsHandler.cpp  MainMenuEventsHandler.hpp  PauseMenuEventsHandler.cpp  PauseMenuEventsHandler.hpp  SystemListener.cpp  SystemListener.hpp  WindowCloseHandler.cpp  WindowCloseHandler.hpp
core/event/management/producer/: SystemListener.cpp  SystemListener.hpp
core/event/menu/: AuthorizationMenuEvent.cpp  AuthorizationMenuEvent.hpp  Continue.cpp  Continue.hpp  MainMenuEvent.cpp  MainMenuEvent.hpp  MenuEvent.cpp  MenuEvent.hpp  NewGame.cpp  NewGame.hpp  PauseMenuEvent.cpp  PauseMenuEvent.hpp  Quit.cpp  Quit.hpp  ToMainMenu.cpp  ToMainMenu.hpp
core/event/physics/: Collision.cpp  Collision.hpp  Death.cpp  Death.hpp  SensorCollision.cpp  SensorCollision.hpp  SensorCollisionEnd.cpp  SensorCollisionEnd.hpp  TakeDamage.cpp  TakeDamage.hpp
core/event/runner/: GameRunnerEvent.cpp  GameRunnerEvent.hpp  LevelRunnerEvent.cpp  LevelRunnerEvent.hpp  RunnerEvent.cpp  RunnerEvent.hpp
core/event/system/: ApplicationFinish.cpp  ApplicationFinish.hpp  KeyHeld.cpp  KeyHeld.hpp  KeyPressed.cpp  KeyPressed.hpp  KeyReleased.cpp  KeyReleased.hpp  Keystroke.cpp  Keystroke.hpp  LevelPause.cpp  LevelPause.hpp  WindowClose.cpp  WindowClose.hpp  WindowClosing.cpp  WindowClosing.hpp
core/event/visual/: PositionalAppearance.cpp  PositionalAppearance.hpp  VisualEvent.cpp  VisualEvent.hpp
core/loader/: LevelLoader.cpp  LevelLoader.hpp  LevelLoaderFromFile.cpp  LevelLoaderFromFile.hpp  LevelLoaderFromServer.cpp  LevelLoaderFromServer.hpp
core/menu/: AuthorizationMenu.cpp  AuthorizationMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp
core/runner/: GameRunner.cpp  GameRunner.hpp  LevelLoader.cpp  LevelLoader.hpp  LevelRunner.cpp  LevelRunner.hpp  Runner.hpp  SequentialRunner.cpp  SequentialRunner.hpp
core/system/: KeyboardListener.cpp  KeyboardListener.hpp  SystemListener.cpp  SystemListener.hpp
core/visual/: Camera.cpp  Camera.hpp  PositionalAppearance.cpp  PositionalAppearance.hpp  Renderable.hpp
core/visual/image/: Image.hpp  RenderableImage.cpp  RenderableImage.hpp
core/visual/image/animated/: AnimatedImage.cpp  AnimatedImage.hpp  AnimatedImageOneFile.cpp  AnimatedImageOneFile.hpp  AnimatedImageSeveralFiles.cpp  AnimatedImageSeveralFiles.hpp  RenderableAnimated.cpp  RenderableAnimated.hpp  RenderableAnimatedOneFile.cpp  RenderableAnimatedOneFile.hpp  RenderableAnimatedSeveralFiles.cpp  RenderableAnimatedSeveralFiles.hpp
core/world/: LocalWorld.cpp  LocalWorld.hpp  World.cpp  World.hpp
core/world/entity/: Entity.cpp  Entity.hpp  EntityStorage.cpp  EntityStorage.hpp  PhysicalEntity.cpp  PhysicalEntity.hpp  ViewableEntity.cpp  ViewableEntity.hpp
core/world/filter/: Filter.hpp  IdFilter.hpp  RadiusFilter.hpp  TagFilter.hpp  TagRadiusFilter.hpp  TrueFilter.hpp
core/world/intent/: Intent.cpp  Intent.hpp  LambdaIntent.cpp  LambdaIntent.hpp
game/: CMakeLists.txt  example.cpp  game_database_example.cpp  game_loader_from_server_example.cpp  game_runner_example.cpp  game_with_default_loader_example.cpp
game/mobs/: MobController.cpp  MobController.hpp
game/mobs/hero/: Hero.cpp  Hero.hpp
network/: CMakeLists.txt
network/client/: client.cpp  simple-client.cpp
network/server/: server.cpp  simple-server.cpp
test/: CMakeLists.txt  test.cpp
test/core/: TestCast.cpp  TestCore.cpp
(+67 files in other folders)
